# sous-chef-kitchen

./: .flake8  .gitignore  .pre-commit-config.yaml  AUTH_FIXES.md  CHANGELOG.md  DEPLOYMENT_BUILD_TIME_DEPENDENCIES.md  Dockerfile  Makefile  README.md  app.py  buffet.py  email_flow.py  flow.py  lint.py  models.py  prefect.yaml  prefect.yaml.local.in  prefect_client.py  pyproject.toml  requirements-client.txt  requirements-flow.txt  requirements-server.txt  requirements.txt  run_test.py  souschef_client.py  topterms_recipe.yaml
a_la_carte/: email_flows.py  flow.py
al_la_carte/: email_flows.py  flow.py
buffet_app/static/: main.html  style.css
dev/: README.md  prefect.yaml.local.in  prepare-local-deployment.sh
docker/: Dockerfile  Dockerfile.worker  README.md  deploy.sh  docker-compose.yaml  docker-swarm.yaml  prefect-config.py  prefect-config.sh  prefect.yaml.in
recipes/: entities_and_keywords_en.yaml  keywords.yaml  topterms.yaml
recipes/entities/: recipe.yaml
recipes/export_metadata/: recipe.yaml
recipes/keywords/: recipe.yaml
scripts/: override-sous-chef.sh  prepare-local-deployment.sh
sous_chef_buffet/client/: cli.py  menu.py  web.py
sous_chef_buffet/flows/: email_flow.py  flow.py  prefect.yaml
sous_chef_buffet/kitchen/: api.py  chef.py  flow.py  models.py
sous_chef_buffet/shared/: models.py
sous_chef_kitchen/: __init__.py
sous_chef_kitchen/client/: cli.py  menu.py
sous_chef_kitchen/kitchen/: __init__.py  api.py  chef.py  flow.py  logging_config.py  models.py  webhook.py
sous_chef_kitchen/shared/: models.py  recipe.py
templates/: email_template.j2
